test/mutation_analysis/s0551_student_attendance_record_i/hafis/o3/mutants/2/result.txt
./test/mutation_analysis/s0551_student_attendance_record_i/hafis/o3/mutants/2/Solution.java:15: error: unreachable statement
        while (false) {
                      ^
1 error
